--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,154 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+body {
+  background: linear-gradient(45deg, #f06291, #fffde7);
+}
+
+.container {
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.calculator {
+  position: relative;
+  height: auto;
+  width: auto;
+  padding: 20px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 30px #bb8282;
+          box-shadow: 0 0 30px #bb8282;
+  background-color: #fff;
+  /* Dark theme */
+}
+
+.calculator #display {
+  color: #0a1e23;
+  margin: 0 10px;
+  height: 110px;
+  width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  font-size: 30px;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+
+.calculator #equal {
+  height: 130px;
+}
+
+.calculator #clear {
+  background-color: #ffd5d8;
+  color: #fc4552;
+}
+
+.calculator .btn-number {
+  background-color: #c3eaff;
+  color: #000000;
+}
+
+.calculator .btn-operator {
+  background-color: #ffd0fb;
+  color: #f967f3;
+}
+
+.calculator .btn-equal {
+  background-color: #adf9e7;
+  color: #000;
+}
+
+.calculator.dark {
+  background-color: #1B1b1b;
+}
+
+.calculator.dark #display {
+  color: #f8fafb;
+}
+
+.calculator.dark #clear {
+  background-color: #4c35AA;
+  color: white;
+}
+
+.calculator.dark .btn-number {
+  background-color: #8efda6;
+  color: black;
+  font-weight: 600;
+}
+
+.calculator.dark .btn-operator {
+  background-color: #F0d84f;
+  color: #aa00a4;
+}
+
+.theme-toggler {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.theme-toggler::before {
+  content: '';
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: #333;
+  z-index: -1;
+}
+
+.theme-toggler.active {
+  color: #333;
+}
+
+.theme-toggler.active::before {
+  background-color: #fff;
+}
+
+button {
+  height: 60px;
+  width: 60px;
+  border: 0;
+  border-radius: 30px;
+  margin: 5px;
+  font-size: 20px;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+/*# sourceMappingURL=styles.css.map */
